--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,4 @@ buildNumber.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
 
+.idea/
